//it's lazy updated file, so the real ChangeLog is the activity on github

+ Basic Haskell hl
* Good old bug with syntax hl engine (related to partial hl module file) is fixed
+ Youtube subtitles hl support
+ Fn - Case - Capitalize sentences

+ qt 4.x compat again

* Spellcheker module rewrite

+ lua is added for script intepritators (Fn - Script)
+ Fn::Script: bat, btm scripts support (Win)
+ Fn::Script: cmd //REXX  

* old format for keywords (in syntax hl files) with ";" as the delimeter is dropped, use current one (regexp) instead if you write own hl files
see /hls dir for examples

+ Ctrl-mouse wheel to zoom text at current tab

+ Functions - Analysis - UNITAZ sorting length
+ Functions - Filter - Filter by repetitions
+ Functions - Sort - Sort by length

+ os2:: single application mode
* so2:: tea-qmake.pro is destined to Qt5 now
* single application mode - fixed on UNIX/Win

* fixes cmake file for install icons and desktop file
* OS/2 fix

* cmake's make dist creates tarball with dirname as at github, i.e. tea-qt-<ver>

+ Tune::UI Mode:: Classic/Docked

- Tune::Interface::Override locale
+ Tune::Interface::UI Language list

* CMake:: TEA QML stuff is disabled by default.
  To enable:
  cmake -DUSE_QML=True 

* Meson::
  QML stuff is disabled

* Text to HTML - fixed
* drag and drop - fixed

* Nav - Prev/Next tab, now circled
+ Tune - Interface :: new, simplified font selectors (also workaround of Qt 5.13 font bug)

+ Fm - Checksum menu
+ Fm - Checksum menu - MD4, MD5, SHA1, SHA 224, all SHA-2, 3, Keccak

+ Functions - Text - Anagram
+ Tune::Common - Use Enca for charset detection
Enca binary can be used to detect encoding. TEA's own detection engine works with Russian/Ukrainian charsets,
so Enca is the better option, when installed.
+ UTF-8 detection has been improved

+ When open the recent file, editor tab is activated

* qt4 compilation fix

* "search in files" results window close automatically with TEA
* main windows destructor FIX //using deleteLater()
