@@ -1,8 +1,0 @@
-<document pattern="^.*\.(sbv|vtt)$">
-
-<item name="options" casecare="0"></item>
-
-<item name="keywords" type="keywords" color="digits">\b\d{1,}:\d{1,}:\d{1,}\.\d{1,}\b</item>
-
-
-</document>
