@@ -1,8 +1,9 @@
 //it's lazy updated file, so the real ChangeLog is the activity on github
 
-+ Basic Haskell hl
++ SRT hightlighting
++ Basic Haskell hightlighting
 * Good old bug with syntax hl engine (related to partial hl module file) is fixed
-+ Youtube subtitles hl support
++ Youtube subtitles highlighting support
 + Fn - Case - Capitalize sentences
 
 + qt 4.x compat again
